Fix tile data + word-break in player

--- a/css/style.scss
+++ b/css/style.scss
@@ -409,6 +409,7 @@ h3 {
 
             h3 {
                 margin-bottom: 0.5em;
+                word-break: break-word;
             }
 
             .you {
